# n2_fit

./: .gitignore  pyproject.toml  readme.md  test.py
data/: N1spistarBL25SU.ods  N1spistarBL25SU.txt  belchem_n2_136.txt  n2.txt
examples/: N1spistarBL25SU.pkl  belchem_n2.pkl  example_create_table.py  example_fit.py  example_fit_belchem.py  example_fit_modify_initial_guess.py  example_fit_short.py  example_plot_initial_guess.py  n2.pkl
examples/data/: 00138_primary.csv  00139_primary.csv  00140_primary.csv  00141_primary.csv  00142_primary.csv  00143_primary.csv  00144_primary.csv  00145_primary.csv  00146_primary.csv  00147_primary.csv  00171_primary.csv  00172_primary.csv  00173_primary.csv  00174_primary.csv  00175_primary.csv  00177_primary.csv  00178_primary.csv  00179_primary.csv  00180_primary.csv  00183_primary.csv  00184_primary.csv  N1spistarBL25SU_short.txt  belchem_n2.txt  belchem_n2_136_short.txt  belchem_n2_short.txt
examples/results/: N1spistarBL25SU.json  belchem_n2.json  belchem_n2_136.json  n2.json
examples/tables/: skewedVoigt.csv
src/n2_fit/: __init__.py  bluesky_interface.py  create_tables.py  fit.py  helper_functions.py  models.py  n2_peaks_parameters.py  stefan.py
tables/: skewedVoigt.csv
