[project]
name = "n2_fit"
version = "0.0.47"

authors = [
  { name="Simone Vadilonga", email="simone.vadilonga@helmholtz-berlin.de" },
]
description = "A project to fit N2 spectra with different models"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]

dependencies = [
            'numpy>=1.22.0',
            'psutil>=5.9.1',
            'matplotlib>=3.5.1',
            'pandas>=2.1.4',
            'lmfit>=1.3.2', 
            'ipython>=8.30.0', 
            'tqdm>=4.67.1',
            'pyyaml>=6.0.2'
]

[project.urls]
"Homepage" = "https://github.com/simonevadi/n2_fit"
# "Bug Tracker" = ""
# "Documentation" = ""